# Django_Quotes_Website

./: README.md  pyproject.toml
hw_django/: db.sqlite3
hw_django/hw_django/: settings.py
hw_django/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_django/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw_django/quotes/static/quotes/: style.css
hw_django/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html
hw_django/quotes/templatetags/: extract.py
hw_django/users/: forms.py  urls.py  views.py
hw_django/users/templates/users/: login.html  logout.html  signup.html
hw_django/utils/: add_quotes_to_mongo.py  migration.py
