[tool.poetry]
name = "hw10"
version = "0.1.0"
description = ""
authors = ["legendarym4x <maxwel842@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
pymongo = "3.13.0"
bson = "0.5.8"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
